Fixed inconsistent spacing on product cards
Also added a border radius on edge of card

--- a/styles/Category.module.css
+++ b/styles/Category.module.css
@@ -104,27 +104,34 @@
 	overflow: hidden;
 }
 .productCard {
-	padding: 1rem;
+	padding: 2rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
 	gap: 0;
-	max-width: 250px;
+	/* max-width: 250px; */
 	transition: 0.15s all ease-out;
 	overflow-y: hidden;
+	border-radius: 4px;
+}
+.productCardBody {
+	max-width: 250px;
 }
 .productCard a {
+	height: 100%;
 	/* height: 450px; */
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
+	justify-content: space-between;
+	gap: 1rem;
 }
 .productCard:hover {
 	box-shadow: 0px 0px 10px 10px lightgray;
 	transform: scale(1.03);
 }
 .productCardImage {
+	justify-self: center;
 	align-self: center;
 }
 .productInfo {
